<resources>
    <string name="app_name">LaiSuat19110017</string>
    <string name="title">Công Cụ Tính Lãi Tiền Gửi</string>
    <string name="num1">Số tiền gửi*</string>
    <string name="num2">Lãi suất gửi*</string>
    <string name="num3">Kì hạn gửi*</string>
    <string name="num4">Số tiền lại nhận được</string>
    <string name="num5">Tổng số tiền nhận được khi hết hạn</string>
    <string name="btn_result">XEM KẾT QUẢ</string>
    <string name="btn_camera">TAKE A PICTURE</string>
    <string name="btn_back">Back</string>
</resources>