<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tiengui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:drawableStart="@drawable/money"
        android:drawablePadding="20dp"
        android:hint="@string/num1"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/laisuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:drawableStart="@drawable/stock"
        android:drawablePadding="20dp"
        android:hint="@string/num2"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiengui" />

    <EditText
        android:id="@+id/kyhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:drawableStart="@drawable/kyhan"
        android:drawablePadding="20dp"
        android:hint="@string/num3"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/laisuat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_result"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/btn_result"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kyhan" />
</androidx.constraintlayout.widget.ConstraintLayout>