<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tienlai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/num4"
        android:padding="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:drawableStartCompat="@drawable/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tongtien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/num5"
        android:padding="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:drawableStartCompat="@drawable/stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tienlai" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_result"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="Camera"
        android:text="@string/btn_camera"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tongtien" />
</androidx.constraintlayout.widget.ConstraintLayout>